src/styles/globals.scss
/* ... */
.ant-tooltip-inner {
  max-width: 600px;
  width: max-content;
}

.ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item {
  padding: 12px 8px !important;
}

.ant-dropdown .ant-dropdown-menu .ant-dropdown-menu-item:hover {
  background-color: #fffaf0 !important;
}

.ant-dropdown .ant-dropdown-menu {
  padding: 8px !important;
  border-radius: 0px !important;
}

.ant-dropdown-menu-item:hover .ant-dropdown-menu-title-content li span {
  color: #ffb800;
}

.learningOutcome-description {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    display: block !important;
    font-weight: bold !important;
  }
  h1 {
    font-size: 2em !important;
  }
  h2 {
    font-size: 1.5em !important;
  }
  h3 {
    font-size: 1.17em !important;
  }
  h5 {
    font-size: 0.83em !important;
  }
  h6 {
    font-size: 0.67em !important;
  }
  pre {
    display: block !important;
    font-family: monospace !important;
    white-space: pre !important;
  }
  p {
    display: block;
    font-size: 14px;
  }
}

.ant-modal .ant-modal-content {
  border-radius: 0px !important;
}

.sapp-modal .ant-modal-content {
  padding: 70px !important;
}

.sapp-modal--math .ant-modal-content {
  width: fit-content;
  padding: 20px !important;
  margin: auto;
}

.sapp-modal--math.ant-modal {
  width: fit-content !important;
}

.sapp-modal .ant-modal-content .ant-modal-header .ant-modal-title {
  @apply text-4xl font-semibold text-bw-1;
}

.ant-modal-root .ant-modal-mask {
  @apply bg-bw-10;
}

.lf-player-container {
  height: inherit;
  @apply flex items-center justify-center;
}

// Animate the size, inside
.secondary:hover,
// .secondary:focus,
.primary:hover {
  box-shadow: inset 0 0 0 2em var(--hover);
}

$colors: (
  secondary: white,
  primary: #ffd81b,
);

$hover: (
  secondary: #ffb800,
  primary: #ffc83a,
);

$focus: (
  primary: #ffb800,
);

// Sass variables compile to a static string; CSS variables are dynamic and inherited
// Loop through the map and set CSS custom properties using Sass variables
@each $button, $color in $colors {
  .#{$button} {
    --color: #{$color};
    --hover: #{map-get(
        $hover,
        $button
      )}; // Sử dụng màu hover tương ứng với mỗi button
    transition: background-color 0.3s ease; // Hiệu ứng transition cho màu nền
  }

  .#{$button}:hover {
    --color: map-get(
      $hover,
      $button
    ); // Sử dụng màu hover tương ứng với mỗi button khi hover hoặc focus
  }
}

// Now every button will have different colors as set above. We get to use the same structure, only changing the custom properties.
.secondary {
  color: #404041;
  transition: 0.25s;
  @apply bg-gray-3;

  &:hover {
    @apply text-white;
  }
}

.primary {
  transition: 0.25s;
  @apply bg-primary text-white;

  &:hover {
    @apply text-white;
  }
}

.ant-drawer .ant-drawer-body {
  padding: 0 !important;
}

.sapp-notifcation.text-bw-1 a:hover {
  @apply text-primary;
}

.ant-drawer {
  position: unset;
}

.ant-drawer .ant-drawer-mask,
.ant-drawer .ant-drawer-mask,
.ant-drawer .ant-drawer-content-wrapper {
  position: fixed;
  background-color: #000000cc;
}

.shadow-activity.aos-init.aos-animate {
  transform: none !important;
}

textarea:focus {
  --tw-ring-color: none;
  @apply border-primary;
}

textarea {
  @apply border-[1px] border-gray-2;
}

.button-icon {
  transition: 0.25s;

  &:hover {
    @apply bg-primary-2;
  }
}

:where(.css-dev-only-do-not-override-1xg9z9n).ant-modal {
  font-family: 'Roboto' !important;
}

p a {
  @apply text-blue-1 underline;
}

.ant-dropdown {
  z-index: 2000 !important;
}

.ant-tooltip .ant-tooltip-inner {
  padding: 10px 12px !important;
}

#floating-button {
  @apply fixed h-[60px] w-[60px] cursor-pointer rounded-full bg-white;
  box-shadow:
    rgba(0, 0, 0, 0.1) 0px 1px 4px,
    rgba(0, 0, 0, 0.2) 0px 2px 12px;
}

.sapp-pinned-noti-header {
  padding: 12px 24px 12px 233px;
  background: #18355d;
}

.sapp-pinned-noti-header {
  padding: 12px 24px 12px 233px;
  @apply bg-bw-1;
}

@keyframes moveDown {
  0% {
    transform: translateY(-100%);
    opacity: 0;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}

.plus {
  animation: plus-out 0.3s;
  transition: all 0.3s;
  @apply left-[-2px] h-[60px] w-[60px];
}

#container-floating {
  @apply fixed bottom-[30px] right-[20px] z-[50px] h-[60px] w-[60px];
}

// @keyframes edit-in {
//   from {
//     opacity: 0;
//     transform: rotateZ(-70deg);
//   }
//   to {
//     opacity: 1;
//     transform: rotateZ(0deg);
//   }
// }

// @keyframes edit-out {
//   from {
//     opacity: 1;
//     transform: rotateZ(0deg);
//   }
//   to {
//     opacity: 0;
//     transform: rotateZ(-70deg);
//   }
// }

// @keyframes plus-in {
//   from {
//     opacity: 1;
//     transform: rotateZ(0deg);
//   }
//   to {
//     opacity: 0;
//     transform: rotateZ(180deg);
//   }
// }

// @keyframes plus-out {
//   from {
//     opacity: 0;
//     transform: rotateZ(180deg);
//   }
//   to {
//     opacity: 1;
//     transform: rotateZ(0deg);
//   }
// }

// @keyframes bounce-nds {
//   from {
//     opacity: 0;
//   }
//   to {
//     opacity: 1;
//     transform: scale(1);
//   }
// }

// @keyframes bounce-out-nds {
//   from {
//     opacity: 1;
//     transform: scale(1);
//   }
//   to {
//     opacity: 0;
//     transform: scale(0);
//   }
// }

.ant-popover-content {
  width: 360px !important;
}

.ant-popover-inner {
  padding: 24px !important;
  margin-bottom: 16px !important;
}

.ant-popover {
  font-family: 'Roboto', sans-serif !important;
}

#lms-pro #hubspot-messages-iframe-container {
  z-index: 999 !important;
}

#hubspot-conversations-iframe.visible-icon,
#hubspot-messages-iframe-container.visible-icon iframe,
#hubspot-messages-iframe-container .visible-icon {
  display: none !important;
}
#hubspot-conversations-iframe.visible-icon,
#hubspot-messages-iframe-container.visible-icon,
#hubspot-messages-iframe-container .visible-icon {
  position: inherit !important;
}
/* ... */

